add example: table.html

--- a/examples/twoline.html
+++ b/examples/twoline.html
@@ -93,14 +93,14 @@
         text0Container.style.width = "0";
         text1Container.style.width = "0";
       }
-      update({ text0: "Hello world!", text1: "I'm alive!" });
-      play();
-      setTimeout(() => {
-        stop();
-      }, 1000);
-      setTimeout(() => {
-        location.reload();
-      }, 2000);
+      // update({ text0: "Hello world!", text1: "I'm alive!" });
+      // play();
+      // setTimeout(() => {
+      //   stop();
+      // }, 1000);
+      // setTimeout(() => {
+      //   location.reload();
+      // }, 2000);
     </script>
   </body>
 </html>
