replace inlining of the schema definitions using CDATA with content attribute

--- a/examples/oneline-inline.html
+++ b/examples/oneline-inline.html
@@ -3,8 +3,7 @@
   <head>
     <title>One-Line GFX Template</title>
     <!-- This tag contains the JSON-schema within the <meta> tag -->
-    <meta type="gdd-1.0" >
-    <![CDATA[
+    <meta name="graphics-data-definition" type="application/json+gdd" content='
     {
       "title": "One-Line GFX Template",
       "type": "object",
@@ -25,8 +24,7 @@
           "text0"
       ]
     }
-    ]]>
-    </meta>
+    '>
 
     <style>
       body {
