--- a/examples/oneline.html
+++ b/examples/oneline.html
@@ -3,8 +3,7 @@
   <head>
     <title>One-Line GFX Template</title>
     <!-- This tag references the metadata -->
-    <meta type="gdd-1.0" src="oneline.json" />
-
+    <meta name="graphics-data-definition" type="application/json+gdd" src="oneline.json" />
     <style>
       body {
         margin: 0;
