--- a/examples/table.html
+++ b/examples/table.html
@@ -3,7 +3,7 @@
   <head>
     <title>Table GFX Template</title>
     <!-- This tag references the metadata -->
-    <meta type="gdd-1.0" src="table.json" />
+    <meta name="graphics-data-definition" type="application/json+gdd" src="table.json" />
 
     <style>
       body {
