example for how to expose schema on window object

--- a/examples/oneline-inline.html
+++ b/examples/oneline-inline.html
@@ -25,6 +25,9 @@
       ]
     }
     '>
+    <script type="text/javascript">
+      window.gddContent = JSON.parse(document.querySelector('head > meta[name="graphics-data-definition"]').content)
+    </script>
 
     <style>
       body {
