--- a/examples/oneline-inline.html
+++ b/examples/oneline-inline.html
@@ -14,9 +14,7 @@
                   "string"
               ],
               "maxLength": 50,
-              "gddType": [
-                  "single-line"
-              ],
+              "gddType": "single-line",
               "gddOptions": {}
           }
       },
