--- a/examples/twoline.html
+++ b/examples/twoline.html
@@ -3,7 +3,7 @@
   <head>
     <title>Two-Line GFX Template</title>
     <!-- This tag references the metadata -->
-    <meta name="graphics-data-definition" type="application/json+gdd" src="oneline.json" />
+    <script name="graphics-data-definition" type="application/json+gdd" src="oneline.json" ></script>
 
     <style>
       body {
