fix: add optional $schema property to definition

--- a/examples/oneline-inline.html
+++ b/examples/oneline-inline.html
@@ -5,6 +5,7 @@
     <!-- This tag contains the JSON-schema within the <script> tag -->
       <script name="graphics-data-definition" type="application/json+gdd">
     {
+      "$schema": "https://superflytv.github.io/GraphicsDataDefinition/gdd-meta-schema/v1/schema.json",
       "title": "One-Line GFX Template",
       "type": "object",
       "properties": {
