--- a/examples/oneline.html
+++ b/examples/oneline.html
@@ -49,6 +49,7 @@
       text0Container.style.width = "0";
 
       function update(data) {
+	    if (typeof data === "string") data = JSON.parse(data)
         text0Content.innerHTML = data.text0;
         text0Container.style.height = text0Content.offsetHeight + "px";
       }
