--- a/examples/table.html
+++ b/examples/table.html
@@ -47,6 +47,8 @@
       tableContainer.style.opacity = "0";
 
       function update(data) {
+	    if (typeof data === "string") data = JSON.parse(data)
+		
         let html = "<table>";
 
         for (const person of data.people) {
@@ -57,12 +59,9 @@
         tableContainer.innerHTML = html;
       }
       function row(person) {
-        let html = `<tr style="color: ${person.favoriteColor ?? "inherit"};">`;
+        return `<tr style="color: ${person.favoriteColor || 'inherit'}"><td>${person.name}</td><td>${person.age}</td></tr>`;
 
-        html += `<td>${person.name}</td>`;
-        html += `<td>${person.age}</td>`;
-
-        return `<tr>${html}</tr>`;
+        
       }
       function play() {
         setTimeout(() => {
